2007-02-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-lookup-example.c: Adding an example test program to
	check icon-lookup functionality.

	* src/hildon-caption.c:
	* src/hildon-color-button.c:
	* src/hildon-color-chooser-dialog.c:
	* src/hildon-color-chooser.c:
	* src/hildon-controlbar.c:
	* src/hildon-date-editor.c:
	* src/hildon-find-toolbar.c:
	* src/hildon-font-selection-dialog.c:
	* src/hildon-get-password-dialog.c:
	* src/hildon-hvolumebar.c:
	* src/hildon-login-dialog.c:
	* src/hildon-note.c:
	* src/hildon-number-editor.c:
	* src/hildon-range-editor.c:
	* src/hildon-seekbar.c:
	* src/hildon-set-password-dialog.c:
	* src/hildon-sort-dialog.c:
	* src/hildon-sound.c:
	* src/hildon-time-editor.c:
	* src/hildon-time-picker.c:
	* src/hildon-volumebar.c:
	* src/hildon-vvolumebar.c:
	* src/hildon-weekday-picker.c:
	* src/hildon-wizard-dialog.c: Doc update.

2007-02-13  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-hvolumebar-example.c: A hvolumebar test program.

	* src/hildon-code-dialog.c:
	* src/hildon-code-dialog.h: Adding a patch by Santtu Lakkala that adds
	an 'input' signal to the code dialog that is fired each time the user
	presses any of the dialog input buttons.

	* examples/hildon-code-dialog-example.c: Adding test case for the
	new signal.

2007-02-12  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-window-example.c: Adding some title setting to check
	the program/window naming.

2007-02-12  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/Makefile.am:
	* doc/hildon-docs.sgml:
	* doc/visual_index.xml: Adding the widgets-gallery chapter. Works now.

	* doc/images/colour-button.png:
	* doc/images/colour-chooser-dialog.png:
	* doc/images/colour-chooser.png: Removing not needed images.

2007-02-09  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/images: