@@ -1,3 +1,14 @@
+2007-02-15  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* src/hildon-time-editor.c: Check before freeing am/pm strings in
+	finalize.
+
+	* tests/check-hildon-caption.c: 
+	* tests/check-hildon-controlbar.c:
+	* tests/check-hildon-date-editor.c:
+	* tests/check-hildon-font-selection-dialog.c:
+	* tests/check-hildon-note.c: Fixing the tests a little.
+
 2007-02-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	* examples/Makefile.am:
